--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     command: CompileDaemon -log-prefix=false -build="go build -o consumer ./cmd/consumer" -command="./consumer" -graceful-kill=true
     environment:
       - NAME="SERVICE ONE INSTANCE ONE"
-      - ROUTING_KEY="white"
+      - ROUTING_KEY="bar.*"
     tty: true
     depends_on:
       - rabbitmq
@@ -29,7 +29,7 @@ services:
     command: CompileDaemon -log-prefix=false -build="go build -o consumer ./cmd/consumer" -command="./consumer" -graceful-kill=true
     environment:
       - NAME="SERVICE TWO INSTANCE ONE"
-      - ROUTING_KEY="black"
+      - ROUTING_KEY="foo.*"
     tty: true
     depends_on:
       - rabbitmq
@@ -41,7 +41,7 @@ services:
     command: CompileDaemon -log-prefix=false -build="go build -o consumer ./cmd/consumer" -command="./consumer" -graceful-kill=true
     environment:
       - NAME="SERVICE TWO INSTANCE TWO"
-      - ROUTING_KEY="black"
+      - ROUTING_KEY="foo.*"
     tty: true
     depends_on:
       - rabbitmq
